updated folders/emails with actual links, Empfänger is now a string